Add AWS Lambda deployment support
- Add AWS Lambda handler in cmd/lambda/main.go
- Add SAM template.yaml for CloudFormation
- Add PowerShell deploy script for Windows
- Add Makefile for Linux/Mac deployment
- Add comprehensive AWS deployment documentation
- Add GetRouter method to HTTP server for serverless
- Update .gitignore for AWS artifacts
- Add Lambda dependencies to go.mod

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Logs
 *.log
 npm-debug.log*
@@ -90,11 +89,9 @@ dist
 .tern-port
 
 # Go specific
-=======
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
->>>>>>> cdad1bb4f8d510b0c945fed6a87547815392a75b
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -105,7 +102,6 @@ dist
 # Test binary, built with `go test -c`
 *.test
 
-<<<<<<< HEAD
 # Output of the go build
 main
 main.exe
@@ -166,7 +162,14 @@ data/
 .env.development
 .env.test
 .env.production
-=======
+
+# AWS Deployment files
+lambda
+lambda.exe
+.aws-sam/
+packaged.yaml
+samconfig.toml
+
 # Code coverage profiles and other test artifacts
 *.out
 coverage.*
@@ -186,4 +189,3 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
->>>>>>> cdad1bb4f8d510b0c945fed6a87547815392a75b
